# dulaglutide-model

./: .gitignore  .zenodo.json  Dockerfile  README.md  dulaglutide_model.omex  pyproject.toml
.github/workflows/: docker.yml  python.yml
fit/20251009_123555__0d89c/DULAGLUTIDE_LSQ_PHARMACODYNAMICS/: index.html  optimization_result.json  optimization_result.tsv  report.txt
models/: dulaglutide_body.md  dulaglutide_body.xml  dulaglutide_body_flat.md  dulaglutide_body_flat.xml  dulaglutide_intestine.xml  dulaglutide_kidney.md  dulaglutide_kidney.xml  dulaglutide_liver.md  dulaglutide_liver.xml
release-notes/: 0.7.0.md  0.7.1.md  0.7.2.md
simulations/all/: index.html
simulations/all/Barrington2011/: Barrington2011.html  Barrington2011.json  Barrington2011_dulaglutide_DUL01.tsv  Barrington2011_dulaglutide_DUL03.tsv  Barrington2011_dulaglutide_DUL1.tsv  Barrington2011_dulaglutide_DUL12.tsv  Barrington2011_dulaglutide_DUL3.tsv  Barrington2011_dulaglutide_DUL6.tsv
simulations/all/Barrington2011a/: Barrington2011a.html  Barrington2011a.json  Barrington2011a_bodyweight_change_DUL005.tsv  Barrington2011a_bodyweight_change_DUL03.tsv  Barrington2011a_bodyweight_change_DUL1.tsv  Barrington2011a_bodyweight_change_DUL3.tsv  Barrington2011a_bodyweight_change_DUL5.tsv  Barrington2011a_bodyweight_change_DUL8.tsv  Barrington2011a_bodyweight_change_PLAC.tsv  Barrington2011a_dulaglutide_DUL03.tsv  Barrington2011a_dulaglutide_DUL1.tsv  Barrington2011a_dulaglutide_DUL3.tsv  Barrington2011a_dulaglutide_DUL5.tsv  Barrington2011a_dulaglutide_DUL8.tsv  Barrington2011a_hba1c_change_DUL005.tsv  Barrington2011a_hba1c_change_DUL03.tsv  Barrington2011a_hba1c_change_DUL1.tsv  Barrington2011a_hba1c_change_DUL3.tsv  Barrington2011a_hba1c_change_DUL5.tsv  Barrington2011a_hba1c_change_DUL8.tsv  Barrington2011a_hba1c_change_PLAC.tsv
simulations/all/Blonde2015/: Blonde2015.html  Blonde2015.json  Blonde2015_bodyweight_change_DUL075.tsv  Blonde2015_bodyweight_change_DUL15.tsv  (+7 more)
(+360 files in other folders)
