[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dulaglutide-model"
version = "0.7.2"
description = "Python utilities for dulaglutide model."
readme = "README.md"
requires-python = ">=3.14"
authors = [
    {name="Minjun Kim", email="kim.minjun@u.nus.edu"},
	{name="Matthias König", email="konigmatt@googlemail.com"},
]
maintainers = [
	{name="Matthias König", email="konigmatt@googlemail.com"}
]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
    "Programming Language :: Python :: 3.14",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Scientific/Engineering",
	"Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = [
    "SBML",
    "physiologically based pharmacokinetic/pharmacodynamic model",
    "arterial hypertension",
    "PBPK/PD",
    "dulaglutide",
    "computational modeling",
]
dependencies = [
    "sbmlutils>=0.9.6",
    "sbmlsim @ git+https://github.com/matthiaskoenig/sbmlsim.git@22ceed2f5b438e8b22851330d841ad9959e9c357"
]

[project.scripts]
create_nodes = "pkdb_data.management.commands:create_info_nodes_command"
run_dulaglutide = "pkdb_models.models.dulaglutide.run_dulaglutide:main"
fit_dulaglutide = "pkdb_models.models.dulaglutide.fitting.fitting:main"

[project_urls]
Homepage = "https://github.com/matthiaskoenig/dulaglutide-model"
Repository = "https://github.com/matthiaskoenig/dulaglutide-model"
Documentation = "https://github.com/matthiaskoenig/dulaglutide-model"
Issues = "https://github.com/matthiaskoenig/dulaglutide-model/issues"
# Download = "https://pypi.org/project/pkdb_models"

[tool.hatch.build.targets.wheel]
packages = ["src/pkdb_models"]

[tool.hatch.metadata]
allow-direct-references = true

